samples/_failures_safe/1761130699_372550_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4741676.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_b4741676.c:163:5: error: expected expression at end of input
  163 |     } else if (parser->current_token.type == TOKEN_IDENTIFIER)
      |     ^
./samples/SAFE/__tmp_b4741676.c:163:5: error: expected declaration or statement at end of input
